--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,15 +1,29 @@
-@(title: String)(content: Html)
+@(title: String)(content: Html)(implicit messages: Messages)
 
 <!DOCTYPE html>
 
 <html lang="en">
     <head>
         <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
-        <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" media="screen" href='@routes.Assets.versioned("stylesheets/bootstrap.css")'>
+        <link rel="stylesheet" media="screen" href='@routes.Assets.versioned("stylesheets/bootstrap-theme.css")'>
+        <link rel="stylesheet" media="screen" href='@routes.Assets.versioned("stylesheets/main.css")'>
     </head>
     <body>
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <a id="search-home" class="navbar-brand" href="@routes.Application.index()">Search Home</a>
+                </div>
+            </div>
+        </nav>
+
+        <div class="container">
         @content
+        </div>
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+        <script src="@routes.Assets.versioned("javascripts/bootstrap.min.js")"></script>
     </body>
 </html>
